Fix BigInteger